--- a/page-restaurant/src/style.css
+++ b/page-restaurant/src/style.css
@@ -77,8 +77,6 @@ body {
   font-weight: 500;
   font-size: 1.1em;
 }
-.header nav ul {
-}
 main {
   width: 100%;
   flex-grow: 1;
@@ -119,6 +117,8 @@ main > #home > .container > .hero {
   font-weight: 900;
   text-wrap: balance;
   text-align: center;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .hero > p {
   font-size: 1.3em;
