--- a/todo-List/src/style.css
+++ b/todo-List/src/style.css
@@ -290,7 +290,7 @@ input[type="checkbox"]:checked::after {
   padding: 0.4em 0.5em;
 }
 
-#content > .modal-new-nota {
+#content > .modal {
   position: absolute;
   top: 0;
   width: 100%;
@@ -303,7 +303,7 @@ input[type="checkbox"]:checked::after {
   align-items: center;
   display: none;
 }
-#content > .modal-new-nota > .square-form {
+#content > .modal > .square-form {
   display: grid;
   grid-template-rows: auto 1fr;
   grid-template-columns: 1fr 3fr;
@@ -318,7 +318,7 @@ input[type="checkbox"]:checked::after {
   position: relative;
   z-index: 1000;
 }
-#content > .modal-new-nota > .square-form > .top-square-form {
+#content > .modal > .square-form > .top-square-form {
   grid-area: header;
   background-color: var(--pink-pale);
   color: white;
@@ -332,7 +332,7 @@ input[type="checkbox"]:checked::after {
   font-size: 1.5rem;
   cursor: pointer;
 }
-#content > .modal-new-nota > .square-form > aside.left-form {
+#content > .modal > .square-form > aside.left-form {
   grid-area: aside;
   background-color: var(--gray-low);
   padding-top: 1.5em;
@@ -340,15 +340,15 @@ input[type="checkbox"]:checked::after {
   font-size: 1.4em;
   color: var(--letter-normal);
 }
-#content > .modal-new-nota > .square-form > aside.left-form > ul {
+#content > .modal > .square-form > aside.left-form > ul {
   display: flex;
   flex-direction: column;
   gap: 0.7em;
 }
-#content > .modal-new-nota > .square-form > aside.left-form > ul > li > span {
+#content > .modal > .square-form > aside.left-form > ul > li > span {
   font-weight: 300;
 }
-#content > .modal-new-nota > .square-form > .form-main {
+#content > .modal > .square-form > .form-main {
   grid-area: main;
   background-color: white;
   padding: 2em;
