--- a/todo-List/src/style.css
+++ b/todo-List/src/style.css
@@ -57,12 +57,14 @@ textarea:focus-visible {
 
 #content > .square-to-do {
   background-color: #f7f7f7;
-  width: 80%;
-  margin: 0 auto;
-  height: 80%;
+  width: 100%;
+  height: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: stretch;
+  overflow: hidden;
 }
 .container {
   margin: 0 auto;
@@ -71,6 +73,7 @@ textarea:focus-visible {
 .square-to-do > header.header {
   background-color: var(--pink-pale);
   color: white;
+  height: 10vh;
 }
 header.header .logo > h1 {
   display: flex;
@@ -82,6 +85,7 @@ header.header .logo > h1 {
   display: grid;
   grid-template-columns: 1fr 3fr;
   gap: 1em;
+  height: 90vh;
 }
 main > aside {
   background-color: var(--gray-low);
@@ -90,6 +94,9 @@ main > aside {
   justify-content: space-between;
   padding: 3.5em 3em;
   color: var(--letter-normal);
+  height: 100%;
+  max-height: 90vh;
+  overflow-y: scroll;
 }
 main > aside > nav > ul {
   display: flex;
@@ -162,6 +169,9 @@ main > aside > nav > ul > li > a.other-list ~ ul > li > a {
   font-weight: 300;
 }
 main .main-container {
+  height: 100%;
+  max-height: 90vh;
+  overflow-y: scroll;
   padding-top: 2em;
 }
 main .main-container .container {
@@ -178,10 +188,19 @@ main .main-container .container > .list-notes {
 .list-notes > .card {
   justify-content: space-between;
   background-color: #eee;
-  border-left: 2px solid var(--red);
   padding: 0.6em 0.5em;
   display: none;
 }
+.list-notes > .card.lower {
+  border-left: 2px solid var(--green);
+}
+.list-notes > .card.high {
+  border-left: 2px solid var(--red);
+}
+.list-notes > .card.medium {
+  border-left: 2px solid orange;
+}
+
 .list-notes > .card.active {
   display: flex;
 }
@@ -447,8 +466,8 @@ label {
   border: 1px solid var(--red);
 }
 
-.btn-light:not(input[type="date"]):active,
-.btn-light:not(input[type="date"]):hover {
+.btn-light:not(input[type="date"], select):active,
+.btn-light:not(input[type="date"], select):hover {
   background-color: var(--color-prim);
   z-index: 1;
   color: white;
@@ -471,7 +490,8 @@ label {
   z-index: 1;
   color: white;
 }
-.details-form > .submit-form {
+.details-form > .submit-form,
+.details-form > .project-form {
   display: flex;
   align-items: end;
 }
