--- a/Prueba/dinamic/style.css
+++ b/Prueba/dinamic/style.css
@@ -147,22 +147,18 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  position: relative;
 }
 #carrusel-img .images > .content-images > img {
   width: 100%;
-  height: 90%;
+  height: 100%;
   position: absolute;
   object-fit: cover;
   top: 0;
+  transition: all 0.5s ease;
 }
-#carrusel-img .images > .content-images img:nth-child(2) {
-  top: 50%;
-  left: 100%;
-}
-#carrusel-img .images > .content-images img:nth-child(3) {
-  top: 100%;
-  left: 200%;
-}
+
 #carrusel-img .images > .buttons {
   position: absolute;
   background-color: #1a191933;
