--- a/weatherapi/style.css
+++ b/weatherapi/style.css
@@ -28,7 +28,7 @@ body {
 }
 .content {
   padding: 2rem;
-  background-color: var(--light-blue);
+  background: linear-gradient(to bottom, var(--light-blue), var(--blue));
   width: 100%;
   height: 100%;
   color: var(--white);
@@ -93,10 +93,49 @@ header.header > nav > .temperature > button.active {
 .text-w-50 {
   color: rgba(255, 255, 255, 0.5);
 }
-main .container {
+main {
+  position: relative;
+}
+/* loader de carga de espera */
+#loader {
+  display: none;
+}
+#loader.active {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  z-index: 100;
+}
+#loader > i {
+  font-size: 4.5rem;
+  color: black;
+}
+/* mensaje de error cuando no encuetra la cuidad */
+#error-container {
+  display: none;
+}
+#error-container.active {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  position: absolute;
+}
+#error-container > h2 {
+  font-size: 1.5rem;
+  color: var(--warning-red);
+  background-color: var(--white);
+  border-radius: 2.5rem;
+  padding: 0.5em;
+}
+main > .container {
+  display: none;
   width: 50%;
   /* background-color: #ed860733; */
   margin: 0 auto;
+}
+main .container.active {
+  display: block;
 }
 main .container > .card-clima {
   display: flex;
@@ -129,17 +168,18 @@ main .container > .card-clima > .description > .simple {
   width: 30%;
 }
 main .container > .card-clima > .description > .simple > .giant {
-  font-size: 2.5rem;
+  font-size: 2rem;
   display: flex;
   align-items: center;
   font-weight: 500;
 }
 main .container > .card-clima > .description > .simple > .giant > .icon {
-  width: 5rem;
-  flex: 1 1 auto;
+  /* width: 5rem; */
+  display: flex;
+  align-items: center;
 }
 main .container > .card-clima > .description > .simple > .giant img {
-  width: 100%;
+  /* width: 100%; */
 }
 main .container > .card-clima > .description > .boxs {
   width: 70%;
@@ -155,4 +195,15 @@ main .container > .card-clima > .description > .boxs > .box {
 }
 main .container > .card-clima > .description > .boxs > .box > h3 {
   font-size: 1.5rem;
+}
+
+@media only screen and (max-width: 1140px) {
+  main > .container {
+    width: 70%;
+  }
+}
+@media only screen and (max-width: 960px) {
+  main > .container {
+    width: 90%;
+  }
 }
